<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    tools:context="com.shashank.singh.bizy.EditProfile"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <ScrollView
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/mid_spacing">

            <Button
                android:id="@+id/edit_profile_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/field_profile_name"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:background="?active_color"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/regular_spacing"
                style="?android:attr/buttonBarStyle">

                <Button
                    android:id="@+id/edit_profile_start_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/field_profile_start_time"
                    android:textColor="@color/white"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    style="?android:attr/buttonBarButtonStyle"
                    android:background="?active_color"/>

                <Button
                    android:id="@+id/edit_profile_end_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/field_profile_end_time"
                    android:textColor="@color/white"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_marginLeft="@dimen/half_spacing"
                    style="?android:attr/buttonBarButtonStyle"
                    android:background="?active_color"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:layout_marginTop="@dimen/regular_spacing">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="0.14"
                    android:gravity="center">

                    <CheckBox
                        android:id="@+id/edit_profile_MON"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="?checkbox"/>

                    <TextView
                        android:text="@string/mon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="0.14"
                    android:gravity="center">

                    <CheckBox
                        android:id="@+id/edit_profile_TUE"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="?checkbox"/>

                    <TextView
                        android:text="@string/tue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="0.14"
                    android:gravity="center">

                    <CheckBox
                        android:id="@+id/edit_profile_WED"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="?checkbox"/>

                    <TextView
                        android:text="@string/wed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="0.14"
                    android:gravity="center">

                    <CheckBox
                        android:id="@+id/edit_profile_THU"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="?checkbox"/>

                    <TextView
                        android:text="@string/thu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="0.14"
                    android:gravity="center">

                    <CheckBox
                        android:id="@+id/edit_profile_FRI"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="?checkbox"/>

                    <TextView
                        android:text="@string/fri"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="0.14"
                    android:gravity="center">

                    <CheckBox
                        android:id="@+id/edit_profile_SAT"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="?checkbox"/>

                    <TextView
                        android:text="@string/sat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="0.14"
                    android:gravity="center">

                    <CheckBox
                        android:id="@+id/edit_profile_SUN"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="?checkbox"/>

                    <TextView
                        android:text="@string/sun"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/regular_spacing"
                android:layout_marginLeft="@dimen/mid_spacing"
                android:layout_marginRight="@dimen/mid_spacing">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ring"
                    android:layout_gravity="center"/>

                <SeekBar
                    android:id="@+id/edit_profile_volume_ring"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="7"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/music"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/regular_spacing"/>

                <SeekBar
                    android:id="@+id/edit_profile_volume_music"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="15"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alarm"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/regular_spacing"/>

                <SeekBar
                    android:id="@+id/edit_profile_volume_alarm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="7" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notif"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/regular_spacing"/>

                <SeekBar
                    android:id="@+id/edit_profile_volume_notif"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="7" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        ads:adSize="BANNER"
        ads:adUnitId="@string/bottom_banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>

</LinearLayout>