<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="?item_background"
    android:divider="?divider_horizontal"
    android:showDividers="middle">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false"
        android:divider="?divider_vertical"
        android:showDividers="middle">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="65"
            android:orientation="vertical"
            android:divider="?divider_horizontal"
            android:showDividers="middle">

            <TextView
                android:id="@+id/profile_name"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/half_spacing"
                android:gravity="center"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:divider="?divider_vertical"
                android:showDividers="middle">

                <CheckBox
                    android:id="@+id/profile_active"
                    android:button="?checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/profile_start_time"
                    android:textColor="@color/white"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/profile_end_time"
                    android:textColor="@color/white"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/mid_spacing"
            android:orientation="vertical"
            android:layout_weight="35"
            android:layout_gravity="center_vertical">

            <ProgressBar
                android:id="@+id/row_display_pb_ring"
                style="?android:attr/progressBarStyleHorizontal"
                android:progressDrawable="?progressbar"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_marginBottom="@dimen/mid_spacing"
                android:max="7"/>

            <ProgressBar
                android:id="@+id/row_display_pb_music"
                style="?android:attr/progressBarStyleHorizontal"
                android:progressDrawable="?progressbar"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_marginBottom="@dimen/mid_spacing"
                android:max="15"/>

            <ProgressBar
                android:id="@+id/row_display_pb_alarm"
                style="?android:attr/progressBarStyleHorizontal"
                android:progressDrawable="?progressbar"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_marginBottom="@dimen/mid_spacing"
                android:max="7"/>

            <ProgressBar
                android:id="@+id/row_display_pb_notification"
                style="?android:attr/progressBarStyleHorizontal"
                android:progressDrawable="?progressbar"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:max="7"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/half_spacing"
        android:layout_marginBottom="@dimen/regular_spacing"
        android:layout_marginLeft="@dimen/half_spacing"
        android:layout_marginRight="@dimen/half_spacing"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/profile_day_MON"
            android:text="@string/mon"
            android:textSize="@dimen/text_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.12"
            android:gravity="center"/>

        <TextView
            android:id="@+id/profile_day_TUE"
            android:text="@string/tue"
            android:textSize="@dimen/text_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.12"
            android:gravity="center"/>

        <TextView
            android:id="@+id/profile_day_WED"
            android:text="@string/wed"
            android:textSize="@dimen/text_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.12"
            android:gravity="center"/>

        <TextView
            android:id="@+id/profile_day_THU"
            android:text="@string/thu"
            android:textSize="@dimen/text_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.12"
            android:gravity="center"/>

        <TextView
            android:id="@+id/profile_day_FRI"
            android:text="@string/fri"
            android:textSize="@dimen/text_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.12"
            android:gravity="center"/>

        <TextView
            android:id="@+id/profile_day_SAT"
            android:text="@string/sat"
            android:textSize="@dimen/text_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.12"
            android:gravity="center"/>

        <TextView
            android:id="@+id/profile_day_SUN"
            android:text="@string/sun"
            android:textSize="@dimen/text_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.12"
            android:gravity="center"/>

    </LinearLayout>

</LinearLayout>